<resources>
    <string name="app_name">NavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!--IMAGES-->
    <string name="bg">bg</string>

    <!--INPUT BOX-->
    <string name="uname">Username</string>
    <string name="pword">Password</string>

    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="username">Username</string>
    <string name="password1">Set password..</string>
    <string name="password2">Confirm password..</string>

    <!--BUTTON-->
    <string name="login">LOGIN</string>
    <string name="signup">SIGN UP</string>
    <string name="papers">Papers</string>
    <string name="profile">Profile</string>
    <string name="document">Documents</string>
    <string name="tax">Tax</string>
    <string name="service">Services</string>

    <!--TEXT-->
    <string name="welcome">Welcome to Adulting 101!</string>
</resources>
