<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signUp_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="275dp"
        android:layout_height="405dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="#80000000"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:background="?android:attr/listDivider"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:srcCompat="@drawable/app_logo" />


        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:background="?android:attr/listDivider"
            android:visibility="invisible" />

        <EditText
            android:id="@+id/sign_fname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center_horizontal"
            android:hint="@string/fname"
            android:inputType="textPersonName"
            android:selectAllOnFocus="false"
            android:textColor="@color/text_white"
            android:textColorHint="@color/text_white" />

        <View
            android:id="@+id/divider3"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="?android:attr/listDivider"
            android:visibility="invisible" />

        <EditText
            android:id="@+id/sign_lname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center_horizontal"
            android:hint="@string/lname"
            android:inputType="textPersonName"
            android:selectAllOnFocus="false"
            android:textColor="@color/text_white"
            android:textColorHint="@color/text_white" />

        <View
            android:id="@+id/divider4"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="?android:attr/listDivider"
            android:visibility="invisible" />

        <EditText
            android:id="@+id/sign_uname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center_horizontal"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:selectAllOnFocus="false"
            android:textColor="@color/text_white"
            android:textColorHint="@color/text_white" />

        <View
            android:id="@+id/divider5"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="?android:attr/listDivider"
            android:visibility="invisible" />

        <EditText
            android:id="@+id/sign_setPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center_vertical|center_horizontal"
            android:hint="@string/password1"
            android:inputType="textPassword"
            android:textColor="@color/text_white"
            android:textColorHint="@color/text_white" />

        <EditText
            android:id="@+id/sign_confPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center_vertical|center_horizontal"
            android:hint="@string/password2"
            android:inputType="textPassword"
            android:textColor="@color/text_white"
            android:textColorHint="@color/text_white" />

        <View
            android:id="@+id/divider6"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="?android:attr/listDivider"
            android:visibility="invisible" />

        <Button
            android:id="@+id/button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:background="@color/primaryLightColor"
            android:gravity="center_vertical|center_horizontal|center"
            android:text="@string/signup"
            android:textColor="@color/text_black"
            android:textStyle="bold" />

        <View
            android:id="@+id/divider7"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:background="?android:attr/listDivider"
            android:visibility="invisible" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>