<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".LoginPage">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="275dp"
        android:layout_height="333dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="#90000000"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:background="?android:attr/listDivider"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:background="?android:attr/listDivider"
            android:visibility="invisible" />


        <EditText
            android:id="@+id/login_uname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center_horizontal"
            android:hint="@string/uname"
            android:inputType="textPersonName"
            android:textColor="@color/text_white"
            android:textColorHint="@color/text_white" />

        <View
            android:id="@+id/divider3"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:background="?android:attr/listDivider"
            android:visibility="invisible" />

        <EditText
            android:id="@+id/log_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center_vertical|center_horizontal"
            android:hint="@string/pword"
            android:inputType="textPassword"
            android:textColor="@color/text_white"
            android:textColorHint="@color/text_white" />

        <View
            android:id="@+id/divider4"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="?android:attr/listDivider"
            android:visibility="invisible" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:background="#ffc107"
            android:gravity="center_vertical|center_horizontal|center"
            android:onClick="login"
            android:text="@string/login"
            android:textColor="@color/text_black"
            android:textStyle="bold" />

        <View
            android:id="@+id/divider5"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:background="?android:attr/listDivider"
            android:visibility="invisible" />

        <!--<Button-->
        <!--android:id="@+id/button2"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="Button" />-->
        <Button
            android:id="@+id/signup_button"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginLeft="40dp"
            android:gravity="center_vertical|center_horizontal|center"
            android:onClick="sign"
            android:text="@string/signup"
            android:textColor="@color/text_black"
            android:textSize="12sp"
            android:textStyle="bold" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>